Fixed bugs and reworked mapper and controller structure