@@ -14,6 +14,10 @@ java {
     }
 }
 
+test{
+    jvmArgs "-XX:+EnableDynamicAgentLoading"
+    useJUnitPlatform()
+}
 
 
 configurations {
